added color selector en mobile

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -485,9 +485,9 @@
   text-transform: uppercase;
 }
 
-.skuSelectorSubcontainer--color {
+/* .skuSelectorSubcontainer--color {
   display: none;
-}
+} */
 
 .specificationsTablePropertyHeading--specifications-product-mobile, .specificationsTableSpecificationHeading--specifications-product-mobile {
   padding-left: 0;
