--- a/styles/css/vtex.search-result.css
+++ b/styles/css/vtex.search-result.css
@@ -34,9 +34,9 @@
     border-bottom: solid 3px #00AEEF;
 }
 
-.skuSelectorSubcontainer--color {
+/* .skuSelectorSubcontainer--color {
     display: none;
-}
+} */
 
 .selectedCategoryName {
     color: #00AEEF;
