--- a/styles/css/vtex.product-specifications.css
+++ b/styles/css/vtex.product-specifications.css
@@ -1,8 +1,8 @@
 .specificationName--specification-text-specification {
-    font-size: 13px;
-    font-family: 'Helvetica';
+  font-size: 13px;
+  font-family: "Helvetica";
 }
 
 .specificationValue--specification-text-value {
-    font-size: 13px;
+  font-size: 13px;
 }
