--- a/styles/css/vtex.tab-layout.css
+++ b/styles/css/vtex.tab-layout.css
@@ -1,28 +1,26 @@
 .contentContainer--contenido-tab-descripcion {
-    max-width: 810px;
-    margin: auto;
+  max-width: 810px;
+  margin: auto;
 }
 
 .listContainer--lista-tabs-descripcion {
-    background: #80808030;
+  background: #80808030;
 }
-
 .listContainer--lista-tabs-descripcion .listItem :global(.vtex-button) {
-    background: unset;
-    border: unset;
+  background: unset;
+  border: unset;
 }
-
 .listContainer--lista-tabs-descripcion .listItem :global(.vtex-button) :global(.vtex-button__label) {
-    font-size: 18px;
-    padding: 10px 5px;
-    color: #000000d9;
-    font-family: 'Helvetica';
-    text-transform: capitalize;
+  font-size: 18px;
+  padding: 10px 5px;
+  color: #000000d9;
+  font-family: "Helvetica";
+  text-transform: capitalize;
 }
 
 .listItemActive :global(.vtex-button) :global(.vtex-button__label)::before {
-    content: "";
-    width: 10px;
-    margin-right: 5px;
-    border-bottom: solid 3px #00AEEF;
+  content: "";
+  width: 10px;
+  margin-right: 5px;
+  border-bottom: solid 3px #00aeef;
 }
