--- a/styles/css/vtex.add-to-cart-button.css
+++ b/styles/css/vtex.add-to-cart-button.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
 .buttonText--product-buy-button {
-    font-family: 'Poppins';
-    font-weight: 700;
-    font-size: 12px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 0.75rem;
 }
