--- a/styles/css/vtex.minicart.css
+++ b/styles/css/vtex.minicart.css
@@ -1,7 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
 .minicartQuantityBadgeDefault {
-  background: #00aeef;
+  background-color: #00aeef;
 }
 
 .cartIcon {
@@ -11,11 +9,11 @@
 }
 
 .minicartTitle {
-  font-family: "Poppins";
-  font-weight: 500;
+  font-family: "Poppins", sans-serif;
   color: black;
+  font-weight: 500;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 .minicartWrapperContainer :global(.vtex-button):hover {
@@ -29,8 +27,7 @@
 .minicartCheckoutButton--buyCheckoutMinicart :global(.vtex-button__label) {
   font-size: 0;
 }
-
 .minicartCheckoutButton--buyCheckoutMinicart :global(.vtex-button__label)::before {
-  font-size: 16px;
+  font-size: 1rem;
   content: "CONTINUAR COMPRA";
 }
