--- a/styles/css/vtex.product-highlights.css
+++ b/styles/css/vtex.product-highlights.css
@@ -1,25 +1,25 @@
 .productHighlightText--text-flag {
-    color: #000;
-    text-decoration: none;
-    padding: 2px 5px;
-    font-size: 11px;
-    border: solid 1px;
-    width: fit-content;
-    font-family: 'Helvetica';
-    position: relative;
-    bottom: -45px;
-    left: 20px;
-    top: 50%;
-    background: #fff;
-    z-index: 5;
+  font-family: "Helvetica", sans-serif;
+  color: black;
+  background-color: white;
+  text-decoration: none;
+  padding: 2px 5px;
+  font-size: 0.75rem;
+  border: solid 1px;
+  width: fit-content;
+  position: relative;
+  bottom: -45px;
+  left: 20px;
+  top: 50%;
+  z-index: 5;
 }
 
 .productHighlightText--texto-highlight {
-    top: 48px;
-    left: 30px;
-    font-size: 13px;
-    position: relative;
-    z-index: 3;
-    background: #ffff;
-    border: solid 1px;
+  background-color: white;
+  font-size: 0.875rem;
+  top: 48px;
+  left: 30px;
+  position: relative;
+  z-index: 3;
+  border: solid 1px;
 }
