--- a/styles/css/vtex.product-identifier.css
+++ b/styles/css/vtex.product-identifier.css
@@ -1,22 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+@charset "UTF-8";
 .product-identifier {
-    color: #606060;
-    font-family: 'Helvetica';
-    font-weight: 400;
-    font-size: 12px;
+  font-family: "Helvetica", sans-serif;
+  color: #808080;
+  font-weight: 400;
+  font-size: 0.75rem;
 }
 
 .product-identifier__separator {
-    margin-left: 6px;
-}
-
-.product-identifier__label::before {
-    content: "Código";
-    font-size: 12px;
-    text-transform: uppercase;
+  margin-left: 0.375rem;
 }
 
 .product-identifier__label {
-    font-size: 0;
+  font-size: 0;
+}
+.product-identifier__label::before {
+  content: "Código";
+  font-size: 0.75rem;
+  text-transform: uppercase;
 }
