--- a/styles/css/vtex.slider-layout.css
+++ b/styles/css/vtex.slider-layout.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
 .caretIcon--slider-home {
   color: white;
 }
@@ -96,13 +94,9 @@
     margin-right: 0px;
   }
 }
-
 @media screen and (max-width: 1080px) and (min-width: 768px) {
-  .sliderLayoutContainer--slider-home {
-    margin-top: 0;
-  }
-
-  .sliderArrows--slider-home {
+  .sliderLayoutContainer--slider-home,
+.sliderArrows--slider-home {
     margin-top: 0;
   }
 }
