--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
-
 .container {
   padding: 0;
 }
@@ -56,7 +53,6 @@
 .imageElement--slider-home-marcas {
   filter: contrast(0.5);
 }
-
 .imageElement--slider-home-marcas:hover {
   filter: contrast(1);
 }
@@ -75,7 +71,7 @@
 
 .imageElementLink--imagen-categoria-1 {
   margin-bottom: 20px;
-  margin-top: 0!important;
+  margin-top: 0 !important;
 }
 
 .infoCardSubhead--info-card-showroom {
@@ -227,7 +223,11 @@
   margin-left: 2%;
 }
 
-.imageElementLink--imagen-categoria-3, .imageElementLink--imagen-categoria-4, .imageElementLink--imagen-categoria-5, .imageElementLink--imagen-categoria-1, .imageElementLink--imagen-categoria-2 {
+.imageElementLink--imagen-categoria-3,
+.imageElementLink--imagen-categoria-4,
+.imageElementLink--imagen-categoria-5,
+.imageElementLink--imagen-categoria-1,
+.imageElementLink--imagen-categoria-2 {
   margin: auto;
 }
 
@@ -250,9 +250,9 @@
   }
 
   .imageElementLink--imagen-categoria-2,
-  .imageElementLink--imagen-categoria-3,
-  .imageElementLink--imagen-categoria-4,
-  .imageElementLink--imagen-categoria-5 {
+.imageElementLink--imagen-categoria-3,
+.imageElementLink--imagen-categoria-4,
+.imageElementLink--imagen-categoria-5 {
     margin: auto;
     width: 96%;
   }
@@ -261,15 +261,15 @@
     min-width: 280px;
   }
 
-  .skuSelectorOptionsList {
+  .skuSelectorOptionsList,
+.skuSelectorNameContainer {
     margin-left: 0;
   }
 
-  .skuSelectorNameContainer {
-    margin-left: 0;
-  }
-
-  .imageElement--imagen-categoria-4, .imageElement--imagen-categoria-2, .imageElement--imagen-categoria-3, .imageElement--imagen-categoria-5 {
+  .imageElement--imagen-categoria-4,
+.imageElement--imagen-categoria-2,
+.imageElement--imagen-categoria-3,
+.imageElement--imagen-categoria-5 {
     max-height: 185px;
   }
 
@@ -279,24 +279,31 @@
     margin: auto;
   }
 }
-
 @media screen and (max-width: 1080px) and (min-width: 769px) {
   .searchBarInnerContainer--search-desktop {
-    width: 400px!important;
+    width: 400px !important;
   }
 
-  .imageElementLink--imagen-categoria-1, .imageElementLink--imagen-categoria-2, .imageElementLink--imagen-categoria-3, .imageElementLink--imagen-categoria-4, .imageElementLink--imagen-categoria-5{
+  .imageElementLink--imagen-categoria-1,
+.imageElementLink--imagen-categoria-2,
+.imageElementLink--imagen-categoria-3,
+.imageElementLink--imagen-categoria-4,
+.imageElementLink--imagen-categoria-5 {
     display: flex;
     align-items: baseline;
     max-height: 240px;
     max-width: 600px;
   }
 
-  .imageElement--imagen-categoria-4, .imageElement--imagen-categoria-5 {
+  .imageElement--imagen-categoria-4,
+.imageElement--imagen-categoria-5 {
     margin-left: 10px;
   }
 
-  .imageElement--imagen-categoria-4, .imageElement--imagen-categoria-2, .imageElement--imagen-categoria-3, .imageElement--imagen-categoria-5 {
+  .imageElement--imagen-categoria-4,
+.imageElement--imagen-categoria-2,
+.imageElement--imagen-categoria-3,
+.imageElement--imagen-categoria-5 {
     max-height: 224px;
   }
 
@@ -305,13 +312,12 @@
     align-items: center;
   }
 }
-
 @media screen and (max-width: 768px) and (min-width: 630px) {
-  .imageElement--imagen-categoria-5, .imageElement--imagen-categoria-4 {
+  .imageElement--imagen-categoria-5,
+.imageElement--imagen-categoria-4 {
     width: 93%;
   }
 }
-
 .inputGroup--newsletter ::global(.vtex-input-prefix__group) {
   border: unset !important;
 }
@@ -358,7 +364,6 @@
   color: #000000;
   text-transform: capitalize;
 }
-
 .productBrand--product-name::after {
   border-bottom: solid 4px #00aeef;
   width: 75px;
@@ -412,15 +417,12 @@
 .subscriberContainer {
   margin-top: 50px;
 }
-
 .subscriberContainer .form {
   margin-top: 20px;
 }
-
 .subscriberContainer .form .content {
   display: contents;
 }
-
 .subscriberContainer .title {
   font-size: 14px;
 }
@@ -486,14 +488,15 @@
 }
 
 /* .skuSelectorSubcontainer--color {
-  display: none;
-} */
-
-.specificationsTablePropertyHeading--specifications-product-mobile, .specificationsTableSpecificationHeading--specifications-product-mobile {
+    display: none;
+  } */
+.specificationsTablePropertyHeading--specifications-product-mobile,
+.specificationsTableSpecificationHeading--specifications-product-mobile {
   padding-left: 0;
 }
 
-.specificationItemProperty--specifications-product-mobile, .specificationItemSpecifications--specifications-product-mobile {
+.specificationItemProperty--specifications-product-mobile,
+.specificationItemSpecifications--specifications-product-mobile {
   padding-left: 0;
   font-size: 14px;
 }
@@ -517,7 +520,6 @@
   align-items: center;
   padding: 0px 20px;
 }
-
 .imageElementLink--image-whatsapp:hover {
   background: unset;
   border-radius: 5px;
@@ -531,13 +533,11 @@
   padding-top: 0;
   padding-bottom: 0;
 }
-
 .searchBarContainer :global(.vtex-input-prefix__group) {
   height: 38px;
   border: 2px solid #00aeef;
   background: #fff;
 }
-
 .searchBarContainer :global(.vtex-styleguide-9-x-input) {
   color: #727273;
   border-radius: 1px;
@@ -574,10 +574,7 @@
   margin-bottom: -5px;
 }
 
-.imageElement--elemento-cuarzo-insti {
-  width: 95%;
-}
-
+.imageElement--elemento-cuarzo-insti,
 .imageElement--elemento-madera-insti {
   width: 95%;
 }
@@ -594,6 +591,7 @@
   max-width: 200px;
   max-height: 70px;
 }
+
 /* Vitrina categoria */
 .price_className--precio-mejor-categoria {
   display: flex;
@@ -641,9 +639,6 @@
   .searchBarContainer {
     padding: 6px;
     background: unset;
-  }
-
-  .searchBarContainer {
     width: 320px;
   }
 
@@ -653,14 +648,13 @@
   }
 
   .imageElement--imagen-rrss {
-    width: 30px!important;
+    width: 30px !important;
   }
 
   .imageElementLink--imagen-rrss {
     margin-right: 10px;
   }
 }
-
 :global(.vtex-reviews-and-ratings-2-x-inlineContainer) {
   min-height: 23px;
 }
