Se agrega porcentaje de descuento en pdp mobile

--- a/styles/scss/vtex.product-price.scss
+++ b/styles/scss/vtex.product-price.scss
@@ -15,6 +15,12 @@
   margin-bottom: 4px;
 }
 
+@media (max-width:991px) {
+  .savings--porcentaje-categoria {
+    margin-left: 0px;
+  }
+}
+
 .installments--cuotas-producto {
   color: #00000085;
   font-family: "Helvetica";
