--- a/styles/css/vtex.product-price.css
+++ b/styles/css/vtex.product-price.css
@@ -14,7 +14,7 @@
 }
 
 @media (max-width: 991px) {
-  .savings--porcentaje-categoria {
+  :global(.vtex-flex-layout-0-x-flexCol--product-lef-col-mobile) .savings--porcentaje-categoria {
     margin-left: 0px;
   }
 }
