--- a/styles/css/vtex.menu.css
+++ b/styles/css/vtex.menu.css
@@ -104,6 +104,10 @@
   width: 100%;
   max-width: 1280px;
   margin: auto;
+  max-height: 400px;
+  flex-wrap: wrap;
+  gap: 2%;
+  overflow: auto;
 }
 
 .styledLinkContainer--item-submenu {
