--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -73,6 +73,11 @@
   min-width: 120px;
 }
 
+.flexRowContent--row-submenu-marca{
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .flexRowContent--search-header-mobile {
   display: flex;
   justify-content: space-evenly;
@@ -94,6 +99,10 @@
   display: flex;
   justify-content: center;
   margin: 20px 0;
+}
+
+.flexCol--col-submenu-marca{
+  width: 10% !important;
 }
 
 .flexRow--flex-row-inspiracion {
