--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -99,6 +99,13 @@
 
 .flexCol--col-submenu-marca {
   width: 10% !important;
+  margin-bottom: 1%;
+}
+.flexCol--col-submenu-marca :global(.vtex-store-components-3-x-imageElement--imagen-menu) {
+  width: 70%;
+}
+.flexCol--col-submenu-marca :global(.vtex-rich-text-0-x-paragraph--texto-submenu-imagen) {
+  text-transform: capitalize;
 }
 
 .flexRow--flex-row-inspiracion {
