se corrige error del chat arriba del boton y precio total para comprar en el carrito

--- a/styles/scss/vtex.minicart.scss
+++ b/styles/scss/vtex.minicart.scss
@@ -1,5 +1,9 @@
 @use "../var/library" as l;
 
+.drawer{
+  z-index: 10000000000;
+}
+
 .minicartQuantityBadgeDefault {
   background-color: l.$color-2;
 }
